--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ChatAi-Me",
+  "name": "newproject",
   "version": "1.0.0",
-  "description": "Simple Express server with CORS and fetch support",
+  "description": "Simple Express server",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -12,3 +12,4 @@
     "express": "^4.18.2",
     "node-fetch": "^3.3.2"
   }
+}
